# gbx-lm

./: .gitignore  .gitmodules  CHANGELOG.md  MANIFEST.in  README.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
examples/common/: __init__.py  config.yaml  emb_model.py
examples/graph_rag/: README.md  config.py  requirements.txt  run.py
examples/graph_rag/graph_operations/: neo4j_graph.py
examples/graph_rag/llm/: entity_resolution.py  gbx_model.py
examples/local_rag/: README.md  requirements.txt  run.py
gbx_lm/: __init__.py  __main__.py  cache_prompt.py  calibration.py  chat.py  evaluate.py  fastapi_server.py  foo.py  gba2mlx.py  generate.py  infer_opt.py  lora.py  manage.py  method.py  prompt_cache.py  server.py  server_utils.py  utils.py
gbx_lm/examples/: config.py  lora_config.yaml
gbx_lm/langchain/: README.md  __init__.py  chat_gbx.py  gbx_pipeline.py  graph_transformer.py
gbx_lm/langchain/examples/common/: README.md  emb_model.py
gbx_lm/langchain/examples/graph_rag/: README.md  config.py  graph_rag.py  run.py
gbx_lm/langchain/examples/graph_rag/llm/: gbx_model.py
gbx_lm/langchain/examples/local_rag/: README.md  emb_model.py  local_rag.py  requirements.txt  run.py
gbx_lm/models/: base.py  cache.py  qdeepseek_v3.py  qgemma.py  qgpt_oss.py  qllama.py  qmixtral.py  qphi2.py  qphi3.py  qqwen2.py  qqwen3.py  qqwen3_moe.py  qstarcoder2.py  quantized_linear_gba.py  rope_utils.py  su_rope.py  switch_layers.py
gbx_lm/routing/: __init__.py  confidence_scorer.py
gbx_lm/serve/: README.md  mlx_fastchat_worker.py
gbx_lm/tuner/: README.md  __init__.py  datasets.py  dora.py  lora.py  trainer.py  utils.py
tests/: test_datasets.py  test_fastapi_server.py  test_finetune.py  test_gbx_chat.py  test_gbx_pipeline.py  test_models.py  test_sample_utils.py  test_server.py  test_tuner_utils.py  test_utils.py  test_utils_load_model.py
(+5 files in other folders)
